--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@1inch/tsconfig",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "release": "node ./release.mjs"
+  },
+  "devDependencies": {
+    "semver": "^7.5.3"
   }
 }
