--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@1inch/tsconfig",
   "version": "1.0.0",
-  "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "release": "node ./release.mjs"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
