--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@1inch/tsconfig",
-  "version": "1.0.0",
+  "version": "v1.0.1",
   "license": "UNLICENSED",
   "scripts": {
     "release": "node ./release.mjs"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
+  },
+  "dependencies": {
+    "semver": "^7.5.4"
   }
 }
